--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300&family=Montserrat:wght@300;400;500;600;700;800;900&family=Work+Sans:wght@400;600;700;800&display=swap');
 /* shared style */
 * {
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   font-family: 'Lato', sans-serif;
   font-family: 'Montserrat', sans-serif;
   font-family: 'Work Sans', sans-serif;
@@ -17,6 +17,9 @@
   font-weight: 600;
   cursor: pointer;
   border: 0;
+}
+.text-light-gray {
+  color: #727272;
 }
 /* Header style */
 header {
@@ -38,7 +41,7 @@ nav > ul {
 }
 nav li {
   list-style: none;
-  margin-right: 2rem;
+  margin-right: 1.8rem;
   font-size: 1rem;
   font-weight: 500;
 }
@@ -57,14 +60,39 @@ nav li a {
   font-size: 4rem;
   font-weight: 700;
 }
-.banner-description {
-  color: #727272;
-  font-size: 1rem;
-  font-weight: 400;
-}
+
 .banner img {
   margin-top: 20px;
   width: 100%;
+}
+
+/* Main style */
+main {
+  max-width: 1440px;
+  margin: 70px auto;
+}
+.teams-container {
+  display: flex;
+  align-items: center;
+}
+.teams-img-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+}
+.teams-content {
+  padding: 0px 70px;
+}
+.teams-title {
+  font-size: 2.8rem;
+}
+.teams-title .quick-list {
+  color: #727272;
+  font-weight: 500;
+}
+.teams-title .text-features {
+  color: #ff900e;
+  font-weight: 700;
 }
 
 /* Responsive styles */
@@ -72,15 +100,22 @@ nav li a {
   header {
     padding: 20px;
   }
-  nav {
+  nav,
+  .teams-container {
     flex-direction: column;
+  }
+  .teams-img-container {
+    grid-template-columns: 1fr;
+  }
+  .teams-content {
+    padding: 0px 20px;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 992px) {
   header {
     padding: 50px;
   }
-  nav {
+  nav .teams-img-container {
     flex-direction: column;
   }
 }
