our facts part done

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,11 @@
 .text-light-gray {
   color: #727272;
 }
+.section-title {
+  color: #131313;
+  font-size: 2.8rem;
+  font-weight: 700;
+}
 /* Header style */
 header {
   background: rgba(255, 144, 14, 0.1);
@@ -31,11 +36,7 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
-.nav-title {
-  color: #131313;
-  font-size: 2.8rem;
-  font-weight: 700;
-}
+
 nav > ul {
   display: flex;
 }
@@ -95,20 +96,49 @@ main {
   font-weight: 700;
 }
 
+/* Facts styles */
+
+.facts-card-container {
+  display: flex;
+  justify-content: space-around;
+}
+.facts-card-container .card {
+  border-radius: 8px;
+  border: 1px solid #ff900e;
+  text-align: center;
+  padding: 30px;
+}
+.facts-card-container .card-stats {
+  font-size: 2.8rem;
+  color: #424242;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.facts-card-container .card-title {
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 5px;
+}
+
 /* Responsive styles */
 @media screen and (max-width: 576px) {
   header {
     padding: 20px;
   }
   nav,
-  .teams-container {
+  .teams-container,
+  .facts-card-container {
     flex-direction: column;
   }
   .teams-img-container {
     grid-template-columns: 1fr;
   }
-  .teams-content {
+  .teams-content,
+  .facts-card-container {
     padding: 0px 20px;
+  }
+  .facts-card-container {
+    gap: 20px;
   }
 }
 @media screen and (min-width: 576px) and (max-width: 992px) {
