--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,7 +119,20 @@ main {
   font-size: 1.25rem;
   margin-top: 5px;
 }
-
+/* sponsors style */
+.sponsors {
+  text-align: center;
+}
+.sponsors-img-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 40px;
+}
+.sponsors-img-container img {
+  width: 165px;
+}
 /* Responsive styles */
 @media screen and (max-width: 576px) {
   header {
@@ -127,7 +140,8 @@ main {
   }
   nav,
   .teams-container,
-  .facts-card-container {
+  .facts-card-container,
+  .sponsors-img-container {
     flex-direction: column;
   }
   .teams-img-container {
@@ -145,7 +159,8 @@ main {
   header {
     padding: 50px;
   }
-  nav .teams-img-container {
+  nav .teams-img-container,
+  .sponsors-img-container {
     flex-direction: column;
   }
 }
