--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,6 +96,51 @@ main {
   font-weight: 700;
 }
 
+/* feature section styles */
+.features {
+  margin-top: 130px;
+  display: flex;
+  gap: 100px;
+}
+
+.features .section-title {
+  border-left: 5px solid #ff900e;
+  padding-left: 20px;
+}
+
+.feature-content .card {
+  padding: 30px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.feature-img img {
+  height: 90%;
+  margin-left: 90px;
+}
+
+.ten-years-badge {
+  border-radius: 8px;
+  background: #ff900e;
+  color: #fff;
+  width: 340px;
+  padding: 40px;
+  text-align: center;
+  position: relative;
+  bottom: 100px;
+}
+
+.ten-years-badge h2 {
+  font-size: 4rem;
+  margin: 0;
+}
+
+.ten-years-badge p {
+  font-size: 1.5rem;
+}
+
 /* Facts styles */
 
 .facts-card-container {
@@ -133,33 +178,55 @@ main {
 .sponsors-img-container img {
   width: 165px;
 }
-/* Responsive styles */
+/* responsive media queries */
+/* mobile devices */
 @media screen and (max-width: 576px) {
   header {
     padding: 20px;
   }
+
   nav,
   .teams-container,
+  .features,
   .facts-card-container,
   .sponsors-img-container {
     flex-direction: column;
   }
+
+  .feature-img img {
+    width: 90%;
+    margin-left: 0;
+  }
+
+  .ten-years-badge {
+    position: static;
+    max-width: 300px;
+  }
+
   .teams-img-container {
     grid-template-columns: 1fr;
   }
+
   .teams-content,
   .facts-card-container {
-    padding: 0px 20px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
+
   .facts-card-container {
     gap: 20px;
   }
 }
-@media screen and (min-width: 576px) and (max-width: 992px) {
+
+/* tablet or medium devices */
+@media screen and (min-width: 576px) and (max-width: 960px) {
   header {
     padding: 50px;
   }
-  nav .teams-img-container,
+
+  nav,
+  .features,
+  .teams-container,
   .sponsors-img-container {
     flex-direction: column;
   }
